--- a/icons.html
+++ b/icons.html
@@ -1,7 +1,12 @@
+<!DOCTYPE html>
 <html>
-<link rel="preconnect" href="https://fonts.gstatic.com">
-<link href="https://fonts.googleapis.com/css2?family=Fira+Sans:wght@100;300;500;900&display=swap" rel="stylesheet">
 
+<head>
+    <meta charset="utf-8">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Fira+Sans:wght@100;300;500;900&display=swap" rel="stylesheet">
+    <title>header</title>
+</head>
 <body>
     <div class="container">
         <header>
